<resources>
    <string name="app_name" translatable="false">Readify</string>
    <string name="button_add_comment">Add comment</string>
    <string name="button_getting_started">Get started</string>
    <string name="check_login_data_message">Check the data you inserted</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="error_email">The email is invalid</string>
    <string name="error_password">The password is invalid</string>
    <string name="error_username">The username is invalid</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google_login">Login with Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_comment">Write your comment here</string>
    <string name="login" translatable="false">Login</string>
    <string name="logo">App logo</string>
    <string name="navigation_bar_item_home" translatable="false">Home</string>
    <string name="navigation_bar_item_profile">Profile</string>
    <string name="navigation_bar_item_saved">Saved</string>
    <string name="navigation_bar_item_search">Search</string>
    <string name="navigation_bar_label_image_selector">Select the avatar</string>
    <string name="navigation_bar_label_notifications">Notifications</string>
    <string name="new_account">No account yet?</string>
    <string name="pa_collections">Collections</string>
    <string name="pa_description_arrow" translatable="false">arrow right</string>
    <string name="pa_description_photo" translatable="false">personal area photo</string>
    <string name="pa_notes">Notes</string>
    <string name="pa_edit_profile">Edit profile</string>
    <string name="pa_stats">Statistics</string>
    <string name="pa_title">My Personal Area</string>
    <string name="password" translatable="false">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="placeholder_book_author">Book author</string>
    <string name="placeholder_book_description">Book description</string>
    <string name="placeholder_book_rating" translatable="false">5.0</string>
    <string name="placeholder_book_title">Book title</string>
    <string name="placeholder_comment">Body of the comment</string>
    <string name="placeholder_comment_name">Name</string>
    <string name="placeholder_date" translatable="false">01/01/2023</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username" translatable="false">Username</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="visibility">
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <string name="textview_comments_title">Comments</string>
    <string name="textview_description_title">Description</string>
    <string name="textview_icon_already_read">Already read?</string>
    <string name="textview_icon_add_to_collection">Add to …</string>
    <string name="textview_slogan">Your library at your fingertips.</string>
    <string name="hint_search_book">Enter book title</string>
    <string name="button_search">Search</string>
    <string name="hint_search_author">Enter author name</string>
    <string name="textview_search_filters_title">Sort and Search Filters</string>
    <string name="textview_sort_by_label">Sort by</string>
    <string name="textview_title_order_label">Title</string>
    <string name="textview_rating_order_label">Rating</string>
    <string name="textview_genre_filter_label">Genre</string>
    <string name="button_apply">Apply</string>
    <string name="button_reset" translatable="false">Reset</string>
    <string name="content_description_book_cover">Cover of the book</string>
    <string name="content_description_add_to_bookshelf">Add to collection</string>
    <string name="content_description_light_mode">Light Mode icon</string>
    <string name="content_description_dark_mode">Dark Mode icon</string>
    <string name="content_description_arrow_notification">Open current notification section icon</string>
    <string name="content_description_follower_notification">Follower notification icon</string>
    <string name="content_description_recommended_notification">Recommended notification icon</string>
    <string name="content_description_shared_profiles_notification">Shared profiles notification icon</string>
    <string name="content_description_system_notification">System notification icon</string>
    <string name="content_description_statistics_notification">Statistics notification icon</string>
    <string name="content_description_public_profile">Public profile</string>
    <string name="content_description_private_profile">Private profile</string>
    <string name="placeholder_error_message">An error occurred. Please, retry.</string>
    <string name="button_retry">Retry</string>
    <string name="content_description_filter_button">Filter Search</string>
    <string name="placeholder_home_welcome">Hi,</string>
    <string name="textview_home_continue_label">Let\'s continue where we left off</string>
    <string name="textview_trending_books">Trending books</string>
    <string name="book_search_error">An error occurred during the search, please retry.</string>
    <string name="description_not_available">This book does not provide a description. Feel free to explore its content through reviews or comments for more information</string>
    <string name="empty_search_snackbar">The searchbar is empty</string>
    <string name="textview_home_recommended">Recommended for you</string>
    <string name="textview_new_books">New Books</string>
    <string name="textview_loading">Loading…</string>
    <string name="rating_not_available">Rating not available</string>
    <string name="unexpected_error">An unexpected error occurred, please retry.</string>
    <string name="error_login_user_message">An error occurred during login, please retry</string>
    <string name="error_login_password_message">An error occurred during login, check your password again</string>
    <string name="error_no_google_account_found_message">Error: no google account associated to this email</string>
    <string name="empty_collection">There are no books in this collection</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="undo_changes">Undo Changes</string>
    <string name="users_section">Users</string>
    <string name="books_section">Books</string>
    <string name="hint_search_users">Search another user</string>
    <string name="placeholder_username" translatable="false">username</string>
    <string name="textview_books_read">Books read:</string>
    <string name="book_details">Book details</string>
    <string name="error_author_not_found">Author not found</string>
    <string name="notifications_button">Notifications</string>
    <string name="settings_button_profile">Menu</string>
    <string name="user_details">User details</string>
    <string name="collection_settings_button">Collection\'s settings</string>
    <string name="textview_followers">Followers</string>
    <string name="textview_following">Following</string>
    <string name="follow_button_string">Follow</string>
    <string name="unfollow_button_string">Unfollow</string>
    <string name="content_description_background_book">A background containning a blurred version of the book\'s cover.</string>
    <string name="content_description_add_to_collection">Add a book into a collection.</string>
    <string name="snackbar_empty_comment">You cannot enter an empty comment.</string>
    <string name="delete_comment_button">Delete this comment</string>
    <string name="textview_add_to_collection_title">Select a collection</string>
    <string name="button_create_new_collection">Create a new collection</string>
    <string name="textview_collection_name_placeholder">Collection\'s name</string>
    <string name="slash">/</string>
    <string name="textview_hint_insert_collection_name">Insert the name of the collection</string>
    <string name="textview_make_collection_public">Make it public</string>
    <string name="textview_visibility_description">The collections made public will be shown on your profile and can be viewed by your followers</string>
    <string name="button_add_collection">Add collection</string>
    <string name="button_cancel_add_collection">Cancel</string>
    <string name="snack_bar_empty_collection_name">Collection\'s name cannot be empty</string>
    <string name="create_new_collection">Create a new collection</string>
    <string name="imageview_avatar">Avatar of the user</string>
    <string name="delete_collection_action">Delete the collection</string>
    <string name="rename_collection_action">Rename the collection</string>
    <string name="content_description_collection_visibility">Visibility of the collection</string>
    <string name="content_description_collection_thumbnail">Thumbnail of the collection</string>
    <string name="delete_collection_confirm_message">Are you sure you want to delete the following collection</string>
    <string name="rename_collection_confirm_message">Type the new name of the collection</string>
    <string name="confirm_action">Confirm</string>
    <string name="cancel_action">Cancel</string>
    <string name="no_results_found">No results found.\nTry searching for something else!</string>
    <string name="new_followers_notification_title">New followers</string>
    <string name="recommended_books_notification_title">Recommended books</string>
    <string name="shared_profiles_notification_title">Shared profiles</string>
    <string name="system_notification_title">System</string>
    <string name="statistics_notification_title">Statistics</string>
    <string name="new_followers_notification_content">Newest followers…</string>
    <string name="recommended_books_notification_content">Newest recommended books…</string>
    <string name="shared_profiles_notification_content">Newest shared profiles…</string>
    <string name="system_notification_content">Newest system notifications…</string>
    <string name="statistics_notification_content">Check your progress…</string>
    <string name="show_all_notifications">Show all</string>
    <string name="no_notifications_found">No new notifications yet</string>
    <string name="content_description_logo_startup">Application logo, loading…</string>
    <string name="textview_select_avatar">Select your profile picture</string>
    <string name="content_description_button_edit_profile">Confirm profile changes</string>
    <string name="textview_already_registered">Do you already have an account?</string>
    <string name="change_collection_visibility_action">Visibility</string>
    <string name="no_collections_found">No collection found.\nThis user has no public collection!</string>
    <string name="private_profile_message">This user has a private profile.\nTo see his collections, you must follow each other.</string>
    <string name="empty_biography_message">You haven\'t set a bio yet. You can add one in the "edit profile" section.</string>
    <string name="error_add_book_to_collection">Error: add to collection failed</string>
    <string name="error_remove_book_from_collection">Error: remove from collection failed</string>
    <string name="error_logout">An error occurred during logout</string>
    <string name="error_local_database">Local database error</string>
    <string name="no_users_found">No users found.\nWe don\'t have any user with that username.</string>
    <string name="no_users_found_generic">No users found.</string>
    <string name="started_following_notification_message">started following you.</string>
    <string name="edit_sensible_data">Edit sensible data</string>
</resources>