<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_delete_collection"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/delete_collection_action"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_collection_settings"
        android:icon="@drawable/ic_baseline_settings"
        android:title="@string/collection_settings_button"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/action_rename_collection"
                android:title="@string/rename_collection_action"
                android:icon="@drawable/baseline_edit_24" />
        </menu>
    </item>


</menu>