
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageview_user"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/imageview_avatar"
            tools:src="@drawable/avatar1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/textview_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/placeholder_username"
                />

            <TextView
                android:id="@+id/textview_books_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_books_read"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>