<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:orientation="vertical"
    app:cardBackgroundColor="?attr/colorTertiary"
    app:contentPadding="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/comment_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_baseline_profile_24"
            android:contentDescription="@string/placeholder_comment"
            />

        <TextView
            android:id="@+id/comment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/comment_image"
            android:text="@string/placeholder_comment_name"
            android:textColor="?attr/colorOnTertiary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_name"
            android:layout_toEndOf="@id/comment_image"
            android:text="@string/placeholder_comment"
            android:textColor="?attr/colorOnTertiary" />

        <TextView
            android:id="@+id/comment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_text"
            android:layout_toEndOf="@id/comment_image"
            android:text="@string/placeholder_date" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>
