<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/follow_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imageview_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        tools:src="@drawable/avatar1" />

    <TextView
        android:id="@+id/follow_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="10dp"
        android:textColor="?attr/colorOnTertiary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/follow_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/username" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/follow_button"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/follow_button_string"
        app:layout_constrainedWidth="true"
        app:icon="@drawable/person_add_black_24dp"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="gone"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/unfollow_button"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/unfollow_button_string"
        app:layout_constrainedWidth="true"
        app:icon="@drawable/person_remove_black_24dp"
        app:iconPadding="5dp"
        android:textColor="?attr/colorOnBackground"
        app:iconTint="?attr/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="?attr/colorButtonNormal"
        android:visibility="gone"
        tools:visibility="visible"
        />


</androidx.constraintlayout.widget.ConstraintLayout>