<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mobile_gradient_backgrounds_2"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.startup.WelcomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_readify_logo"
        />

    <TextView
        android:id="@+id/textview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_login"
        app:endIconMode="clear_text"
        app:errorTextColor="@color/white"
        app:errorIconTint="@color/white"
        android:textColorHint="@color/white"
        app:shapeAppearanceOverlay="@style/RoundedEditText"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="3dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawableTint="@color/white"
            android:drawablePadding="20dp"
            android:textColor="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/white"
        app:errorTextColor="@color/white"
        app:errorIconTint="@color/white"
        app:shapeAppearanceOverlay="@style/RoundedEditText"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="3dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="20dp"
            android:drawableTint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />



    <Button
        android:id="@+id/button_google_login"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/google_login"
        android:textColor="@color/google_login_text"
        android:textSize="14sp"
        app:backgroundTint="@color/google_login_button"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/textview_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/new_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_google_login"
        app:layout_constraintVertical_bias="0.195" />

    <Button
        android:id="@+id/button_register"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_new_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/textview_new_account"
        app:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>
