<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="?attr/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/edit_sensible_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_sensible_data"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_sensible_container_password"
            android:layout_width="wrap_content"
            android:minWidth="320dp"
            android:maxWidth="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/edit_sensible_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:passwordToggleEnabled="true"
            app:shapeAppearanceOverlay="@style/RoundedEditText"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/text_input_box_stroke_color"
            app:hintTextColor="?attr/colorSecondary"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_sensible_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/edit_sensible_error_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textSize="20sp"
                android:visibility="gone"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_sensible_container_password_confirm"
            android:layout_width="wrap_content"
            android:minWidth="320dp"
            android:maxWidth="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/edit_sensible_container_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:passwordToggleEnabled="true"
            app:shapeAppearanceOverlay="@style/RoundedEditText"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/text_input_box_stroke_color"
            app:hintTextColor="?attr/colorSecondary"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_sensible_input_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="20dp"
                android:hint="@string/password_confirm"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/edit_sensible_error_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:textSize="20sp"
                android:visibility="gone"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_confirm_edit"
            android:layout_width="wrap_content"
            android:minWidth="240dp"
            android:maxWidth="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:text="@string/edit_profile"
            android:contentDescription="@string/content_description_button_edit_profile"
            android:textColor="@color/white"
            android:textSize="14sp"
            style="@style/Widget.Material3.Button.ElevatedButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_sensible_container_password_confirm" />

        <Button
            android:id="@+id/button_undo_changes"
            android:layout_width="wrap_content"
            android:minWidth="240dp"
            android:maxWidth="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/grey_button"
            android:text="@string/undo_changes"
            android:textColor="@color/white"
            android:textSize="14sp"
            style="@style/Widget.Material3.Button.ElevatedButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_confirm_edit" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>